<resources>
    <string name="app_name">NoteLocation</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>


    <string name="button_OK">OK</string>


    <!-- About Me -->
    <string name="about_me_title">About This Application</string>
    <string name="about_me_msg">Coding by KenGuerrilla</string>

    <string name="str_note_title">Title</string>
    <string name="str_note_time">Time</string>
    <string name="str_note_place">Place</string>
    <string name="str_note_AC_GPS">Function</string>


    <string name="str_note_title_hint">Title</string>
    <string name="str_note_time_hint">Select Time</string>
    <string name="str_note_place_hint">Place ( Optional )</string>
    <string name="str_note_keying_hint">Note</string>

    <string name="str_text_time_null">Setting time not yet</string>
    <string name="str_text_location_null">Setting GPS not yet</string>


    <string name="test_string_title">Android Studio Title Test </string>
    <string name="test_string_date">2017-12-22</string>
    <string name="test_string_place">Taiwan Tainan</string>
    <string name="test_string_ac">_V_</string>
    <string name="test_string_loaction">_X_</string>
    <string name="test_string_note" translatable="false">test!! test!! test!! test!! test!! test!!</string>
    <string name="test_string_gps_status_off">GPS System offline </string>
    <string name="test_string_gps_status_on">GPS System Online</string>

    <string name="null_string" translatable="false"></string>

    <string name="toolbar_cancel">Cancel       </string>

    <!-- menu -->
    <string name="menu_done">Done</string>
    <string name="menu_edit">Edit</string>

    <!-- MainList popup menu -->
    <string name="main_list_popup_edit">Edit</string>
    <string name="main_list_popup_off">TurnOff</string>
    <string name="main_list_popup_delete">Delete</string>

    <!-- Switch On Off String -->
    <string name="switch_on" translatable="false">ON</string>
    <string name="switch_off" translatable="false">OFF</string>

    <!-- just fun -->
    <string name="fun_dialog_title">Ready Not Yet</string>
    <string name="fun_dialog_msg">Kid, Are you READY???</string>
    <string name="fun_dialog_ans">Yes!! Captain!!</string>
    <string name="title_activity_maps">Map</string>


</resources>
