<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="kenguerrilla.itl.notelocation.View.EditNote"
    tools:showIn="@layout/activity_edit_note"

    >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/et_edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/str_note_title_hint"
            android:textSize="@dimen/note_text_size"
            android:inputType="text"
            android:text="" />


        <EditText
            android:id="@+id/et_edit_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/note_text_size"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/str_note_place_hint"
            android:text="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/fix_linear_layout_right_space"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_gps_set"
                android:layout_width="@dimen/list_view_size_zero"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:paddingStart="8sp"
                android:paddingEnd="@dimen/view_size_zero"
                android:gravity="start"
                android:text="@string/test_string_gps_status_off"
                android:textSize="@dimen/note_text_size" />

            <Switch
                android:id="@+id/sh_gps"
                android:layout_width="@dimen/list_view_size_zero"
                android:layout_height="wrap_content"
                android:layout_marginStart="1sp"
                android:layout_marginEnd="@dimen/view_size_zero"
                android:layout_weight="1"
                android:textOn="@string/switch_on"
                android:textOff="@string/switch_off"

                />

        </LinearLayout>

        <EditText
            android:id="@+id/et_edit_note"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/view_stroke"
            android:textSize="@dimen/note_text_size"
            android:ems="10"
            android:gravity="top|start"
            android:hint="@string/str_note_keying_hint"
            android:inputType="textMultiLine" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>