<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="kenguerrilla.itl.notelocation.NoteInfo"
    tools:showIn="@layout/activity_note_info"

    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="368dp"
        android:layout_height="497dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"

        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_info_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/note_info_view_margin"
            android:background="@drawable/info_content_style_v2"
            android:text="@string/test_string_title"
            android:textSize="@dimen/list_main_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >

            <TextView
                android:id="@+id/tv_info_place"
                android:layout_width="@dimen/list_view_size_zero"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/note_info_view_margin"
                android:background="@drawable/info_content_style_v2"
                android:layout_weight="6"
                android:text="@string/test_string_place"
                android:textSize="@dimen/note_text_size" />

            <TextView
                android:id="@+id/tv_info_date"
                android:layout_width="@dimen/list_view_size_zero"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/note_info_view_margin"
                android:background="@drawable/info_content_style_v2"
                android:layout_weight="4"
                android:gravity="center"
                android:text="@string/test_string_date"
                android:textSize="@dimen/note_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/fix_linear_layout_right_space"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_gps_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/note_info_view_margin"
                android:layout_weight="9"
                android:padding="8sp"
                android:text="@string/test_string_gps_status"
                android:textSize="@dimen/note_text_size" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/null_string" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_info_note"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/note_info_view_margin"
            android:background="@drawable/info_content_style"
            android:text="@string/test_string_note"
            android:textSize="@dimen/note_text_size" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>